tests/typescript_library_definition_support/typescript_library_definition_support.exp
Error ------------------------------------------------------------------------------------------------------ test.js:9:7

Cannot call `greet` with `42` bound to `name` because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:9:7
   9| greet(42) as string; // ERROR — number not string
            ^^ [1]

References:
   node_modules/my-lib/index.d.ts:1:37
   1| export declare function greet(name: string): string;
                                          ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:15:9

Cannot call `compute` with `"x"` bound to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:15:9
   15| compute("x") as number; // ERROR — string not number
               ^^^ [1]

References:
   node_modules/my-lib-js/math.d.ts:1:36
    1| export declare function compute(x: number): number;
                                          ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:19:1

Cannot cast `value` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:19:1
   19| value as string; // ERROR — number not string (d.ts says number)
       ^^^^^

References:
   node_modules/my-lib-shadow/index.d.ts:1:29
    1| export declare const value: number;
                                   ^^^^^^ [1]
   test.js:19:10
   19| value as string; // ERROR — number not string (d.ts says number)
                ^^^^^^ [2]



Found 3 errors
